--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="style.css">
+	<title>Gallery</title>
+</head>
+<body>
+	
+	 <header class="header">
+        <div class="logo">flickr API</div>
+		<div class="search"> 
+			<input type="text" class="search-input" placeholder="Search...">
+			<button class="clear-button">&times;</button> 
+			<button class="search-button">Search</button>
+		</div>
+       
+    </header>
 
+    <section class="gallery">
+     
+    </section>
+
+    <footer class="footer">
+        <p>Footer content here</p>
+    </footer>
+
+
+
+	<script src="script.js"></script>
+</body>
+</html>
