feat: add footer

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="search"> 
 			<input type="text" class="search-input" placeholder="Search...">
 			<button class="clear-button">&times;</button> 
-			<button class="search-button">Search</button>
+			<button class="search-button"><img src="search.png" alt=""></button>
 		</div>
        
     </header>
@@ -24,7 +24,9 @@
     </section>
 
     <footer class="footer">
-        <p>Footer content here</p>
+        		<a href="https://github.com/DmytroWW" class="github"><img src="github.png" alt="github"> </a>
+				<p>2024</p>
+				<a href="https://rs.school/" class="rsschool"><img src="rsschool.png" alt="rsschool"></a>
     </footer>
 
 
